some style adjustments, moved dismiss button to top right corner, fixed layout bug

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -81,7 +81,7 @@ ul.nav li {
 }
 
 .header-nav {
-  margin: 15px 0 0;
+  margin: 20px 0 0;
 
   a {
     color: #222;
